# pqc-migrator

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
src/pqc_migrator/: __init__.py  __main__.py  cli.py  cryptoagility.py  models.py  tls_scan.py
src/pqc_migrator/output/: __init__.py  cbom.py  json_out.py  sarif.py  table.py
src/pqc_migrator/rules/: __init__.py  default_rules.json  engine.py  model.py
src/pqc_migrator/scanners/: __init__.py  python_ast.py  text.py  walker.py
tests/: conftest.py  test_cli.py  test_cryptoagility.py  test_models.py  test_output.py  test_python_ast_scanner.py  test_rules.py  test_tls_scan.py  test_walker.py
tests/fixtures/: clean_app.py  sshd_config.conf  vulnerable_app.go  vulnerable_app.js  vulnerable_app.py
