[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pqc-migrator"
version = "0.1.0"
description = "Post-Quantum Cryptography readiness scanner & migration toolkit"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Basit Sherazi" }]
keywords = [
    "post-quantum",
    "cryptography",
    "pqc",
    "ml-kem",
    "ml-dsa",
    "security",
    "static-analysis",
    "cbom",
    "sarif",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "cryptography>=42.0",
]

[project.optional-dependencies]
pqc = ["liboqs-python>=0.10"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/BasitS-hash/pqc-migrator"
Repository = "https://github.com/BasitS-hash/pqc-migrator"
Issues = "https://github.com/BasitS-hash/pqc-migrator/issues"

[project.scripts]
pqc-migrator = "pqc_migrator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pqc_migrator"]

[tool.hatch.build.targets.wheel.force-include]
"src/pqc_migrator/rules/default_rules.json" = "pqc_migrator/rules/default_rules.json"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::RuntimeWarning:pqc_migrator.cryptoagility",
]

[tool.coverage.run]
source = ["pqc_migrator"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]  # typer uses function calls in argument defaults by design

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
packages = ["pqc_migrator"]
mypy_path = "src"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
